Force nav z-index to 999, isolate hero stacking context

--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -1,7 +1,7 @@
 ---
 ---
 
-<div class="fixed top-0 left-0 right-0 z-50 flex justify-center pt-5 px-4">
+<div class="fixed top-0 left-0 right-0 z-[999] flex justify-center pt-5 px-4">
   <nav class="nav-bar">
     <a href="/" class="nav-logo-wrapper">
       <span class="nav-logo-border"></span>
